force-app/main/default/objects/Zuora__CustomerAccount__c/Zuora__CustomerAccount__c.object-meta.xml
<CustomObject>
    <description>Zuora Billing Account object.  An account is a customer account that collects all of the critical information about the customer, such as contact information, payment terms, and payment methods. You can use a customer account to track subscriptions, amendments, and transactions, such as invoices and payments.</description>
    <label>Billing Account</label>
    <nameField>
        
        <label>Billing Account Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>