force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Lifetime_Savings__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Savings__c</fullName>
    <description>This field is used in the cs customer portal. The label is visible there so it should be something that is appropriate for customers to see.</description>
    <formula>Zuora__Account__r.Total_Savings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>