force-app/main/default/objects/Zuora__CustomerAccount__c/fields/View_Account__c.field-meta.xml
<CustomField>
    <fullName>View_Account__c</fullName>
    <formula>IF($Label.Company_Name == &apos;BlueWave&apos;, HYPERLINK(&quot;/s/customeraccount/&quot;&amp;Id,&quot;Open Your Account&quot;,
&quot;_self &quot;
), HYPERLINK(&quot;/customerportal/s/customeraccount/&quot;&amp;Id,&quot;Open Your Account&quot;,
&quot;_self &quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displayed in customer portal</inlineHelpText>
    <label>View Account</label>
    <type>Text</type>
</CustomField>