force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Account__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>R00N40000001kyLcEAI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>