force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>