force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__AdditionalEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AdditionalEmailAddresses__c</fullName>
    <label>Additional Email Addresses</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>