force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__AllowInvoiceEdit__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AllowInvoiceEdit__c</fullName>
    <description>Indicates if associated invoices can be edited.</description>
    <label>Allow Invoice Edit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>