force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__AutoPay__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AutoPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Pay</label>
    <type>Checkbox</type>
</CustomField>