force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Balance__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Balance__c</fullName>
    <label>Bill To Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>