force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillCycleDay__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillCycleDay__c</fullName>
    <label>Bill Cycle Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>