force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToAddress1__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToAddress1__c</fullName>
    <label>Bill To Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>