force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToAddress2__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToAddress2__c</fullName>
    <label>Bill To Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>