force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToCity__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToCity__c</fullName>
    <label>Bill To Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>