force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToCountry__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToCountry__c</fullName>
    <label>Bill To Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>