force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToFax__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToFax__c</fullName>
    <label>Bill To Fax</label>
    <type>Phone</type>
</CustomField>