force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToId__c</fullName>
    <label>Bill To Contact Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>