force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToName__c</fullName>
    <label>Bill To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>