force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToPostalCode__c</fullName>
    <label>Bill To Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>