force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToState__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToState__c</fullName>
    <label>Bill To Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>