force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToWorkEmail__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToWorkEmail__c</fullName>
    <label>Bill To Work E-mail</label>
    <type>Email</type>
</CustomField>