force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__BillToWorkPhone__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillToWorkPhone__c</fullName>
    <label>Bill To Work Phone</label>
    <type>Phone</type>
</CustomField>