force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Communication_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Communication_Profile_Id__c</fullName>
    <label>Communication Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>