force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CommunicationProfileId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CommunicationProfileId__c</fullName>
    <label>Communication Profile Id (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>