force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Credit_Balance__c</fullName>
    <description>The total credit balance for the account in Currency representation.</description>
    <inlineHelpText>The total credit balance for the account in Currency representation.</inlineHelpText>
    <label>Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>