force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CreditBalance__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditBalance__c</fullName>
    <defaultValue>0.000000000</defaultValue>
    <description>Credit balance of Billing Account field in Zuora</description>
    <label>Credit Balance( Deprecated )</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>