force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CreditCard_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCard_Expiration__c</fullName>
    <formula>IF (   OR( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c , &quot;CreditCard&quot;) ,   ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__Type__c , &quot;DebitCard&quot;) ),

(IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;1&quot;) , &quot;01&quot;,  IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;2&quot;) , &quot;02&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;3&quot;) , &quot;03&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;4&quot;) , &quot;04&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;5&quot;) , &quot;05&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;6&quot;) , &quot;06&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;7&quot;) , &quot;07&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;8&quot;) , &quot;08&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;9&quot;) , &quot;09&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;10&quot;) , &quot;10&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;11&quot;) , &quot;11&quot;, IF ( ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationMonth__c, &quot;12&quot;) , &quot;12&quot;, &quot;&quot;))))))))))))

&amp; &quot;/&quot; &amp; Zuora__Default_Payment_Method__r.Zuora__CreditCardExpirationYear__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Expiration</label>
    <type>Text</type>
</CustomField>