force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CreditCard_Number__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCard_Number__c</fullName>
    <formula>Zuora__Default_Payment_Method__r.Zuora__CreditCardMaskNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Number</label>
    <type>Text</type>
</CustomField>