force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CreditCardExpiration__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardExpiration__c</fullName>
    <description>payment method Credit Card Expiration</description>
    <label>Credit Card Expiration( Deprecated )</label>
    <length>128</length>
    <type>Text</type>
</CustomField>