force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CreditCardNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardNumber__c</fullName>
    <description>zuora payment method credit card number.</description>
    <label>Credit Card Number( Deprecated )</label>
    <length>128</length>
    <type>Text</type>
</CustomField>