force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CreditCardType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardType__c</fullName>
    <formula>IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;AmericanExpress&quot;),  &quot;AmericanExpress&quot;,
IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;Discover&quot;), &quot; Discover&quot;, 
IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;MasterCard&quot;), &quot;MasterCard&quot;,
IF(  ISPICKVAL(Zuora__Default_Payment_Method__r.Zuora__CreditCardType__c, &quot;Visa&quot;), &quot;Visa&quot;,  &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Type</label>
    <type>Text</type>
</CustomField>