force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Currency__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>