force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__CustomerServiceRepName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CustomerServiceRepName__c</fullName>
    <label>CSR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>