force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Default_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Payment Method</label>
    <referenceTo>Zuora__PaymentMethod__c</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>