force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__DefaultPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DefaultPaymentMethod__c</fullName>
    <label>Default Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>