force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__EntityID__c.field-meta.xml
<CustomField>
    <fullName>Zuora__EntityID__c</fullName>
    <label>Entity ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>