force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__InvoiceDeliveryPrefsEmail__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InvoiceDeliveryPrefsEmail__c</fullName>
    <description>Indicates if the customer wants to receive invoices through email.</description>
    <label>Invoice Delivery Prefs Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>