force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__InvoiceDeliveryPrefsPrint__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InvoiceDeliveryPrefsPrint__c</fullName>
    <description>Indicates if the customer wants to receive printed invoices, such as through postal mail.</description>
    <label>Invoice Delivery Prefs Print</label>
    <length>255</length>
    <type>Text</type>
</CustomField>