force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__InvoiceTemplateId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InvoiceTemplateId__c</fullName>
    <description>The ID of the invoice template.</description>
    <label>Invoice Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>