force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Is_Crm_Id_Change_Processed__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Is_Crm_Id_Change_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Crm Id Change Processed</label>
    <type>Checkbox</type>
</CustomField>