force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__LastInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__LastInvoiceDate__c</fullName>
    <label>Last Invoiced</label>
    <type>Date</type>
</CustomField>