force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__MRR__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MRR__c</fullName>
    <label>CMRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>