force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Notes__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Notes__c</fullName>
    <description>Use this field to record comments about the account.</description>
    <label>Notes</label>
    <length>75535</length>
    <type>LongTextArea</type>
</CustomField>