force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Parent__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Child Billing Accounts</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>