force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Zuora__PaymentTerm__c</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>