force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Payment_Term_Formula__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Payment_Term_Formula__c</fullName>
    <formula>IF( ISBLANK(Zuora__Payment_Term__c) ,  Zuora__PaymentTerm__c,  HYPERLINK( Zuora__Payment_Term__r.Id , Zuora__Payment_Term__r.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>