force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentMethodType__c</fullName>
    <description>zuora payment method type.</description>
    <label>Credit Card Type( Deprecated)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>