force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentTerm__c</fullName>
    <label>Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>