force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PurchaseOrderNumber__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>