force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SalesRepName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SalesRepName__c</fullName>
    <label>Sales Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>