force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToAddress1__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToAddress1__c</fullName>
    <label>Sold To Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>