force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToCity__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToCity__c</fullName>
    <label>Sold To City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>