force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToCountry__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToCountry__c</fullName>
    <label>Sold To Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>