force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToFax__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToFax__c</fullName>
    <label>Sold To Fax</label>
    <type>Phone</type>
</CustomField>