force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToName__c</fullName>
    <label>Sold To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>