force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToPostalCode__c</fullName>
    <label>Sold To Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>