force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToState__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToState__c</fullName>
    <label>Sold To State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>