force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToWorkEmail__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToWorkEmail__c</fullName>
    <label>Sold To Work Email</label>
    <type>Email</type>
</CustomField>