force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__SoldToWorkPhone__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToWorkPhone__c</fullName>
    <label>Sold To Work Phone</label>
    <type>Phone</type>
</CustomField>