force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__TaxExemptCertificateType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxExemptCertificateType__c</fullName>
    <description>The type of the tax exemption certificate that your customer holds.</description>
    <label>Tax Exempt Certificate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>