force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__TaxExemptDescription__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxExemptDescription__c</fullName>
    <description>A description of the tax exemption certificate that your customer holds.</description>
    <label>Tax Exempt Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>