force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__TaxExemptEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxExemptEffectiveDate__c</fullName>
    <description>The date when the the customer&apos;s tax exemption starts.</description>
    <label>Tax Exempt Effective Date</label>
    <type>Date</type>
</CustomField>