force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__TaxExemptIssuingJurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxExemptIssuingJurisdiction__c</fullName>
    <description>Indicates the jurisdiction in which the customer&apos;s tax exemption certificate was issued.</description>
    <label>Tax ExemptIssuing Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>