force-app/main/default/objects/Zuora__CustomerAccount__c/fields/Zuora__Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Zuora_Id__c</fullName>
    <description>The Zuora Id (external primary key) of this Billing Account.</description>
    <inlineHelpText>The Zuora Id (external primary key) of this Billing Account.</inlineHelpText>
    <label>Zuora Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>