force-app/main/default/objects/Zuora__CustomerAccount__c/listViews/EXTERNAL_My_Community_Solar_Accounts.listView-meta.xml
<ListView>
    <fullName>EXTERNAL_My_Community_Solar_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Lifetime_Savings__c</columns>
    <columns>Zuora__Balance__c</columns>
    <columns>View_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Community Solar Accounts</label>
    <sharedTo>
        
            <allCustomerPortalUsers/>
        
        </sharedTo>
</ListView>