force-app/main/default/objects/Zuora__CustomerAccount__c/listViews/Zuora__All.listView-meta.xml
<ListView>
    <fullName>Zuora__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>